force-app/main/default/objects/HDT_ButtonDetails__mdt/HDT_ButtonDetails__mdt.object-meta.xml
<CustomObject>
    <label>Button Details</label>
    <pluralLabel>Button Details</pluralLabel>
</CustomObject>