force-app/main/default/objects/HDT_ButtonDetails__mdt/fields/Accesskey__c.field-meta.xml
<CustomField>
    <fullName>Accesskey__c</fullName>
    <label>Accesskey</label>
    <length>1</length>
    <type>Text</type>
</CustomField>