force-app/main/default/objects/HDT_ButtonDetails__mdt/fields/ButtonCode__c.field-meta.xml
<CustomField>
    <fullName>ButtonCode__c</fullName>
    <label>Button Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>