force-app/main/default/objects/HDT_ButtonDetails__mdt/fields/ButtonLevel__c.field-meta.xml
<CustomField>
    <fullName>ButtonLevel__c</fullName>
    <label>Button Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>