force-app/main/default/objects/HDT_ButtonDetails__mdt/fields/ButtonOrder__c.field-meta.xml
<CustomField>
    <fullName>ButtonOrder__c</fullName>
    <label>Button Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>