force-app/main/default/objects/HDT_ButtonDetails__mdt/fields/ButtonType__c.field-meta.xml
<CustomField>
    <fullName>ButtonType__c</fullName>
    <label>Button type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>webservice</fullName>
                <default>true</default>
                <label>Web Service</label>
            </value>
            <value>
                <fullName>openmodal</fullName>
                <label>Open Modal</label>
            </value>
            <value>
                <fullName>lwcmethod</fullName>
                <label>LWC Method</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>