force-app/main/default/objects/HDT_ButtonDetails__mdt/fields/HideForExtObj__c.field-meta.xml
<CustomField>
    <fullName>HideForExtObj__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide for external object</label>
    <type>Checkbox</type>
</CustomField>