force-app/main/default/objects/HDT_ButtonDetails__mdt/fields/IsVisible__c.field-meta.xml
<CustomField>
    <fullName>IsVisible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Visible</label>
    <type>Checkbox</type>
</CustomField>