force-app/main/default/objects/HDT_ButtonDetails__mdt/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <label>Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>