force-app/main/default/objects/HDT_ButtonDetails__mdt/fields/Tab__c.field-meta.xml
<CustomField>
    <fullName>Tab__c</fullName>
    <label>Tab</label>
    <referenceTo>HDT_TabConfiguration__mdt</referenceTo>
    <relationshipLabel>Button Details</relationshipLabel>
    <relationshipName>ButtonDetails</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>